feature adiciona atualizações
